<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>data-model</module>
    <module>services</module>
    <module>rest</module>
  </modules>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.4</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.cancermodels</groupId>
  <artifactId>pdcm-admin-api</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <name>pdcm-admin-api</name>
  <description>Api project for PDCM admin tasks</description>

  <packaging>pom</packaging>

  <properties>
    <java.version>22</java.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.32</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <configuration>
            <!--
            besides hindering the packaging, this also skips running the app after build when calling spring-boot:run. You have to enable it in the
            corresponding module by setting skip to false, there.
            -->
            <skip>true</skip>
          </configuration>
        </plugin>
        <!--  Moving this here because when it was in the rest project if failed in
        gitlab as it is run from the root project and it didn't have a reference to jib-->
        <plugin>
          <groupId>com.google.cloud.tools</groupId>
          <artifactId>jib-maven-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <from>
              <image>eclipse-temurin:22</image>
            </from>
            <to>
              <image>registry.hub.docker.com/pdxfinder/pdcm-admin-api</image>
            </to>
            <container>
              <mainClass>org.cancermodels.admin.AdminApplication</mainClass>
            </container>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>